--- a/modules/sample_module.yaml
+++ b/modules/sample_module.yaml
@@ -5,21 +5,35 @@ questions:
     title: Your Favorite Animal
     prompt: What's your favorite animal?
     type: text
+
   - id: q2
     title: Do You Know Its Species Name
-    prompt: Do you know your the animal's species name?
+    prompt: Do you know the {{q1}}'s species name?
     type: yesno
+
   - id: q3
     skip_if: q2 == 'no'
     title: Its Species Name
-    prompt: What's its species name?
+    prompt: What's the technical name of the species commonly known as {{q1}}?
     type: text
+
+  - id: q4
+    title: Natural Habitat
+    prompt: "What's the {{q1}}'s natural habitat?"
+    type: longtext
+    answered-by-modules:
+      - sample_two
+      
 output:
   format: markdown
   template: |
     Hello! This is the output of the module based on the Markdown template in the YAML definition.
 
-    Animal:
-    * {{q1}}  {% if q2 == "yes" %} ( {{q3}} ) {% endif %}
+    #### Animal:
+    {{q1}}  {% if q2 == "yes" %} ( {{q3}} ) {% endif %}
+
+    #### Habitat:
+
+    {{q4}}
 
     _Have a nice day!_
