--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -19,7 +19,7 @@ server {
 	listen [::]:443 ssl http2;
 
 	server_name q.govready.com;
-	root /root/public_html;
+	root /home/site/public_html;
  
 	ssl_certificate /etc/ssl/local/ssl_certificate.crt;
 	ssl_certificate_key /etc/ssl/local/ssl_certificate.key;
