--- a/modules/policies.yaml
+++ b/modules/policies.yaml
@@ -24,7 +24,7 @@ questions:
     skip_if: pol_q1 == 'no'
     title: Policies centralized?
     jargon: Are policies and proceedures maintened in centralized store?
-    prompt: What best describes where your organization's official policies and procedures are found?
+    prompt: What best describes where your organization's official policies and procedures are kept and managed?
     type: choice
     choices:
       - key: harddrives
@@ -32,7 +32,7 @@ questions:
       - key: shared_folder
         text: Shared network folder
       - key: dms
-        text: Enterprise document management system like Sharepoint or Documentum?
+        text: Enterprise document management system like Sharepoint or Documentum
       - key: web_page
         text: Intranet or public web page
       - key: git
@@ -45,9 +45,9 @@ questions:
       Does organization have policies for contingency planning, media protection, and 
       systems and communications protection?
     prompt: > 
-      Would you say your organization has written policies an procedures for
-      your data center being destroyed in a storm, how back up media is transported, and
-      encrypting data exchanges?
+      Would you say your organization has written policies and procedures for:
+      your data center being destroyed in a storm, transport back up tapes or disks, and
+      encrypting data exchanges between systems?
     type: yesno
 
 output:
