Change account settings module and add opencontrol module.

--- a/modules/account_settings.yaml
+++ b/modules/account_settings.yaml
@@ -6,7 +6,9 @@ introduction:
   template: |
     Hi,
 
-    This is a module.
+    GovReady Q works much better when you have a user profile. 
+
+    Answer a few  quick questions and will have your profile.
 questions:
   - id: name
     title: Your Name
