when a question variable is used in a template, substitute it with a display string (i.e. if a choice question, return the choice text rather than the choice key) but let its key be accesses through a '.' property accessor

--- a/modules/policies.yaml
+++ b/modules/policies.yaml
@@ -67,4 +67,4 @@ output:
 
     Less commonly found  policies exist?: {{pol_q3}}
 
-    Polices and procedures are kept and managed via: {{pol_q2}}
+    Polices and procedures are kept and managed via: {{pol_q2}} ({{pol_q2.key}})
