also override how question variables are coverted to bool, and correct our sample to test on a yesno question properly now

--- a/modules/sample_module.yaml
+++ b/modules/sample_module.yaml
@@ -65,7 +65,7 @@ output:
     Hello! This is the output of the module based on the Markdown template in the YAML definition.
 
     #### Animal:
-    {{q1}}  {% if q2 == "yes" %} ( {{q3}} ) {% endif %}
+    {{q1}} {% if q2 %} ( {{q3}} ) {% endif %}
 
     {{qc}}
 
