--- a/modules/sample_module.yaml
+++ b/modules/sample_module.yaml
@@ -55,7 +55,7 @@ questions:
 
   - id: q4
     title: Natural Habitat
-    prompt: "What's the {{q1}}'s natural habitat?"
+    prompt: "We now must collect information on {{q1}}'s natural habitat."
     type: module
     module-id: sample_two
       
