--- a/modules/opencontrol_module.yaml
+++ b/modules/opencontrol_module.yaml
@@ -40,30 +40,30 @@ questions:
     type: text
 
 output:
-  format: markdown
-  template: |
-    ```
-    schema_version: "1.0.0" # 1.0.0 is the current opencontrol.yaml schema version
-    name: {{q1}} # Name of the project
-    metadata:
-      description: "{q2}}"
-      maintainers:
-        - {{q3}}
-    components: # A list of paths to components written in the opencontrol format for more information view: https://github.com/opencontrol/schemas
-      - ./component-1
-    certifications: # An optional list of certifications for more information visit: https://github.com/opencontrol/schemas
-      - ./cert-1.yaml
-    standards: # An optional list of standards for more information visit: https://github.com/opencontrol/schemas
-      - ./standard-1.yaml
-    dependencies:
-      certifications: # An optional list of certifications stored remotely
-        - url: github.com/18F/LATO
-          revision: master
-      systems:  # An optional list of repos that contain an opencontrol.yaml stored remotely
-        - url: github.com/18F/cg-compliance
-          revision: master
-      standards:   # An optional list of remote repos containing standards info that contain an opencontrol.yaml
-        - url: github.com/18F/NIST-800-53
-          revision: master
+  - format: markdown
+    template: |
       ```
+      schema_version: "1.0.0" # 1.0.0 is the current opencontrol.yaml schema version
+      name: {{q1}} # Name of the project
+      metadata:
+        description: "{q2}}"
+        maintainers:
+          - {{q3}}
+      components: # A list of paths to components written in the opencontrol format for more information view: https://github.com/opencontrol/schemas
+        - ./component-1
+      certifications: # An optional list of certifications for more information visit: https://github.com/opencontrol/schemas
+        - ./cert-1.yaml
+      standards: # An optional list of standards for more information visit: https://github.com/opencontrol/schemas
+        - ./standard-1.yaml
+      dependencies:
+        certifications: # An optional list of certifications stored remotely
+          - url: github.com/18F/LATO
+            revision: master
+        systems:  # An optional list of repos that contain an opencontrol.yaml stored remotely
+          - url: github.com/18F/cg-compliance
+            revision: master
+        standards:   # An optional list of remote repos containing standards info that contain an opencontrol.yaml
+          - url: github.com/18F/NIST-800-53
+            revision: master
+        ```
 
