add 'project' template context variable for module output documents which holds the title of the project the task is in, fixes #16

--- a/modules/sample_module.yaml
+++ b/modules/sample_module.yaml
@@ -63,6 +63,8 @@ output:
   - name: Document
     format: markdown
     template: |
+      # Animal Compliance for {{project}}
+
       Hello! This is the output of the module based on the Markdown template in the YAML definition.
 
       #### Animal:
