add template iteration over multiple-choice questions

--- a/modules/sample_module.yaml
+++ b/modules/sample_module.yaml
@@ -94,4 +94,8 @@ output:
   - name: HTML
     format: html
     template: |
-      <b>{{q1}}</b>
+      <ul>
+      {% for item in qc %}
+        <li>{{item}} <i>{{item.key}}</i></li>
+      {% endfor %}
+      </ul>
