part 1 of moving modules into the database so that we can iterate and version modules

--- a/modules/opencontrol_module.yaml
+++ b/modules/opencontrol_module.yaml
@@ -1,4 +1,4 @@
-id: opencontrolstarter 
+id: opencontrol_module
 title: Open Control YAML starter file 
 short_description: Generate starter opencontrol.yaml
 long_description: >
