--- a/modules/opencontrol_module.yaml
+++ b/modules/opencontrol_module.yaml
@@ -40,15 +40,14 @@ questions:
     type: email-address
 
 output:
-  - format: markdown
-    template: |
-      ```
+  - format: yaml
+    template:
       schema_version: "1.0.0" # 1.0.0 is the current opencontrol.yaml schema version
-      name: {{q1}} # Name of the project
+      name: "{{q1}}" # Name of the project
       metadata:
         description: "{{q2}}"
         maintainers:
-          - {{q3}}
+          - "{{q3}}"
       components: # A list of paths to components written in the opencontrol format for more information view: https://github.com/opencontrol/schemas
         - ./component-1
       certifications: # An optional list of certifications for more information visit: https://github.com/opencontrol/schemas
@@ -65,5 +64,4 @@ output:
         standards:   # An optional list of remote repos containing standards info that contain an opencontrol.yaml
           - url: github.com/18F/NIST-800-53
             revision: master
-        ```
 
