--- a/modules/icam_example.yaml
+++ b/modules/icam_example.yaml
@@ -7,43 +7,66 @@ editor_requirements: Person familiar with how login and roles work
 introduction:
   format: markdown
   template: |
-    We need to understand how your IT System controls access to data and computing resources.
+    This module gathers information about users of your application. Who can login? Who has special privileges?
 
-    We will gather information about how you identify users, issue logins, and manage access.
+    Enterprises calls this "ICAM" (Identity, Credentials, and Access Management).
 
-    Enterprises often refer to this topic as "ICAM" -- Identity, Credentials,  and Access Management.
-
-    This module has less than a dozen questions.
 questions:
 
   - id: q1
     title: Number of End Users
     prompt: >
-      Approximately how many individual end users will use the IT System during a typical year?
+      Approximately how many individual end users will use your application during a typical year?
     type: text
+    help: "Enter a number (ex: 2000)"
 
   - id: q2
     title: Number of Authenticated Users
-    prompt: |
-      You said you will have {{q1}} end users.
-
-      Approximately how many these end users will have logins?
+    prompt: How many these {{q1}} end users will have logins?
     type: text
+    help: "Enter a number (ex: 2000)"
+
+  - id: q3
+    title: Number of Privileged Users
+    prompt: How many these {{q2}} users with logins will be administrators with extensive system privileges?
+    type: text
+    help: "Enter a number (ex: 2000)"
+    impute:
+      - condition: q2 == '0'
+        value: 0
 
   - id: q21
     title: Single Sign-on
     prompt: Can users login using an existing Single Sign-on identity?
     type: yesno
+    help: Answer "Yes" if people login with Windows account, an enterprise account, or 3rd party authentication
 
   - id: q22
     title: PIV Sign-on
     prompt: Can users login using their PIV smart cards?
     type: yesno
 
-  - id: q3
-    title: PIV Sign-on q3
-    prompt: Can users login using their PIV smart cards? q3
-    type: yesno
+  - id: s4
+    title: User frequency
+    prompt: "How often do you think the same user will visit the site? (# of times/day, week, month, or year)"
+    type: text
+
+  - id: s5
+    title: User load
+    prompt: "How many users do you anticipate being on the site at once? (include a range)"
+    type: text
+    help: "Example: 0-20"
+
+  - id: s1
+    title: Primary audience
+    prompt: Who is the primary audience for the application?
+    type: longtext
+
+  - id: s2
+    title: Secondary audience
+    prompt: Who is the secondary audience for the application?
+    type: longtext
+
 
 output:
   - format: markdown
@@ -56,11 +79,17 @@ output:
       During a typical year:
       * {{q1}} end users will use the application
       * {{q2}} end users will have logins for the application
+      * {{q3}} privileged users with administration permissions
+      * User frequency: {{s4}}
+      * Number of users on the site simultaneously: {{s5}}
+
+      ### About users
+      The primary audience: {{s1}}
+
+      The secondary audience: {{s2}}
 
       ### Authentication support
       * Single sign-on? {{q21}}
       * PIV smart card? {{q22}}
 
-      ### Authentication support
-      * PIV Sign-on q3 {{q3}}
   
