give intro documents and question prompts access to {{project}}, see #21

--- a/modules/sample_module.yaml
+++ b/modules/sample_module.yaml
@@ -3,13 +3,13 @@ title: Animal Compliance
 introduction:
   format: markdown
   template: |
-    Welcome to the Animal Compliance module. This module will help you determine if your animal has an authority to operate.
+    Welcome to the Animal Compliance module. This module will help you determine if your animal has an authority to operate within {{project}}.
 
     This module should take you two minutes.
 questions:
   - id: q1
     title: Your Favorite Animal
-    prompt: What's your favorite animal?
+    prompt: What's your favorite animal within the context of {{project}}?
     type: text
 
   - id: qb
