in document templates, question variables now refer to their internal values (i.e. choice keys) rather than display text for uniformity with impute conditions
To access nice text, use {{q.text}}.

fixes #37

--- a/modules/account_settings.yaml
+++ b/modules/account_settings.yaml
@@ -54,10 +54,10 @@ output:
 
       Title: {{title}}
 
-      Role: {{role}}
+      Role: {{role.text}}
 
       ---
 
       ### Applications
 
-      Chat: {{chat}}
+      Chat: {{chat.text}}
