construct a dynamic title for Tasks based on the answers to questions using a new instance-name field, fixes #40
For now, the title is rendered on-the-fly and is only used on project pages. We probably will want to put it into the database, in Task.title. But then we have to figure out how to update the cached title when the instance-name field is changed in modules.

--- a/modules/opencontrol_module.yaml
+++ b/modules/opencontrol_module.yaml
@@ -1,5 +1,6 @@
 id: opencontrol_module
 title: Open Control YAML starter file 
+instance-name: Open Control YAML starter for {{q1}}
 short_description: Generate starter opencontrol.yaml
 long_description: >
   This module will display a starter `opencontrol.yaml` file
