--- a/modules/sample_module.yaml
+++ b/modules/sample_module.yaml
@@ -1,5 +1,6 @@
 id: sample_module
 title: Animal Compliance
+instance-name: Animal Compliance - {{q1}}
 introduction:
   format: markdown
   template: |
