--- a/modules/point_of_contact.yaml
+++ b/modules/point_of_contact.yaml
@@ -1,5 +1,6 @@
 id: point_of_contact
 title: Point of Contact
+instance-name: "{{q1_name}} (point of contact)"
 introduction:
   format: markdown
   template: |
