--- a/modules/project.yaml
+++ b/modules/project.yaml
@@ -9,15 +9,47 @@ introduction:
     Welcome to GovReady's Compliance Tool, Q.
 
 questions:
-  - id: q99
-    title: Digital Identity
+  - id: q99a
+    title: Digital Identity 1
     type: module
     module-id: icam_example
+    tab: Database
+    group: Identity
 
-  - id: q100
-    title: Select Animal
+  - id: q99b
+    title: Digital Identity 2
+    type: module
+    module-id: icam_example
+    tab: Web Server
+    group: Identity
+
+  - id: q99c
+    title: Digital Identity 3
+    type: module
+    module-id: icam_example
+    tab: Web Server
+    group: SSL/TLS Certificate
+
+  - id: q100a
+    title: Select Animal 1
     type: module
     module-id: sample_module
+    tab: Database
+    group: Identity
+
+  - id: q100b
+    title: Select Animal 2
+    type: module
+    module-id: sample_module
+    tab: Database
+    group: IaaS Credentials
+
+  - id: q100c
+    title: Select Animal 3
+    type: module
+    module-id: sample_module
+    tab: Web Server
+    group: SSL/TLS Certificate
 
 output:
   - name: Help
