--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,6 @@ git+https://github.com/JoshData/commonmark-py-plaintext
 git+https://github.com/if-then-fund/django-html-emailer
 
 django==1.9
+django-allauth
 jsonfield
 django-bootstrap-form
