output document titles are now required and are now called "title" instead of "name"

--- a/modules/account_settings.yaml
+++ b/modules/account_settings.yaml
@@ -44,7 +44,8 @@ questions:
         text: Skype
         help: We like Skype too.
 output:
-  - format: markdown
+  - title: Your Settings
+    format: markdown
     template: |
       Here are your account settings:
 
