more work on the example project

--- a/modules/demo1_project_auth_methods.yaml
+++ b/modules/demo1_project_auth_methods.yaml
@@ -1,5 +1,5 @@
 id: demo1_project_auth_methods
-title: "About The Project: Authentication"
+title: Authentication
 introduction:
   format: markdown
   template: |
