allow questions to have null answers either by being skipped or through an impute condition that yields a null
The UI now has a Skip button on all questions.

Impute values may now be null.

When rendering null answers in templates, we display some filler text.

In templates that access sub-questions of sub-modules, one has to now check if the question has been answered otherwise an exception is raised that the template variable is undefined.

TaskAnswerHistory instances now have a `cleared` boolean field that distinguishes null answers (i.e. skipped/imputed as null) from cleared answers (as if the question had never been answered).

fixes #35, see #48

--- a/modules/demo1_project_name_id_managers.yaml
+++ b/modules/demo1_project_name_id_managers.yaml
@@ -23,7 +23,7 @@ questions:
     type: yesno
     impute:
       - condition: projct_has_identifier == 'no'
-        value: NA
+        value: ~
 
   - id: project_technology_manager
     title: Technology Manger
@@ -47,6 +47,10 @@ output:
 
       Project Identifier: {{projct_identifier}}
 
+      {% if project_technology_manager %}
       Technology Manager: {{project_technology_manager.q1_name}}
+      {% endif %}
 
+      {% if project_iss_manager %}
       ISSM: {{project_iss_manager.q1_name}}
+      {% endif %}
