add a default nginx server so that non-matched hostnames don't go to Django, because that triggers a suspicous operation error email to admins which is unnecessary/annoying

--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -13,6 +13,19 @@ server {
 	access_log off;
 }
 
+# Default server so that the actual server only takes requests
+# from hostnames that we intend to serve. This prevents Django
+# ALLOWED_HOSTS suspicious operation error admin emails. The
+# SSL certificate will of course not validate against other
+# domains.
+server {
+	listen 443 ssl http2 default;
+	listen [::]:443 ssl http2 default;
+	return 404; # nothing here at this domain
+	ssl_certificate /etc/ssl/local/ssl_certificate.crt;
+	ssl_certificate_key /etc/ssl/local/ssl_certificate.key;
+}
+
 # Actual server.
 server {
 	listen 443 ssl http2;
