allow images in module templates
Use a custom CommonMark renderer to map image and link URLs in Markdown to our virtual static path.

Also replace <h#> demoting from the previous commit with a simpler and more accurate routine in the new custom renderer.

see #63

--- a/modules/demo1_system_component_software.yaml
+++ b/modules/demo1_system_component_software.yaml
@@ -14,7 +14,9 @@ questions:
     prompt: |
       # What is a component?
 
-      A component is a thing.
+      A component is a thing. This image should explain it:
+
+        ![A picture of a computer.](testimage.png)
 
       We'll tell you all about it here.
     type: interstitial
